feat: adiciona rotas e controle de plataforma para o super administrador
